:bug: Fix container overflow when scrollbars are visible

--- a/assets/styles/components/landing.scss
+++ b/assets/styles/components/landing.scss
@@ -15,6 +15,7 @@
     height: auto;
     justify-content: flex-start;
     align-items: center;
+    overflow-x: hidden;
 
     border-bottom: 1px solid rgb(177, 177, 177);
 
